--- a/app/src/main/assets/about-template.html
+++ b/app/src/main/assets/about-template.html
@@ -16,7 +16,7 @@
 <table>
     <tr>
         <td>Version</td>
-        <td>1.0.0</td>
+        <td><span style="white-space: nowrap">@VERSION@ (Build:@COMMIT_ID@)</span></td>
     </tr>
     <tr>
         <td>Copyright</td>
